# etl_test_data_warehouse

./: .env  .gitignore  README.MD  pyproject.toml  pytest.ini
src/: etl_houses_prices.py
src/config/: setup_module.py
src/data/: kc_house_data_transform.csv
src/tests/: test_create_database.py  test_create_warehouse copy.py  test_etl_database.py
src/utils/: etl_utils.py
